# conclave

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
conclave/: __init__.py  agent.py  auth.py  backend.py  briefing.py  cli.py  client.py  config.py  llm.py  mcp_server.py  models.py  orchestrator.py  output.py  persistence.py  server.py  turn.py  vote.py
examples/: brainstorm.py
tests/: test_backend.py  test_models.py  test_server.py  test_turn.py  test_vote.py
